testsuite/tests/splice-imports/SI05.stderr
SI05.hs:9:11: error: [GHC-28914]
    • Stage error: ‘SI01A.sid’ is bound at stage {1} but used at stage 0
      Hint: quoting [| SI01A.sid |] or an enclosing expression would allow the quotation to be used in an earlier stage
      From imports {imported from ‘SI01A’ at SI05.hs:5:1-12}
    • In the untyped splice: $(sid [| pure () |])

SI05.hs:9:11: error: [GHC-87543]
    • Ambiguous occurrence ‘sid’.
      It could refer to
         either ‘SI01A.sid’,
                imported from ‘SI01A’ at SI05.hs:5:1-12
                (and originally defined at SI01A.hs:3:1-3),
             or ‘SI05A.sid’,
                imported from ‘SI05A’ at 0 at SI05.hs:6:1-19
                (and originally defined at SI05A.hs:3:1-3).
    • In the untyped splice: $(sid [| pure () |])

