testsuite/tests/splice-imports/SI05.hs
{-# LANGUAGE ExplicitLevelImports #-}
{-# LANGUAGE TemplateHaskell #-}
module SI04 where

import SI01A
import splice SI05A

main :: IO ()
main = $( sid [| pure () |]) >> $$( sid [|| pure () ||])
